# MICCAI-MFS-MeshVAE

./: LICENSE  README.md  pyproject.toml
demo/: demo.py
marfan_face/: __init__.py  encoder.py  inference.py
weights/: age_stats.pt  encoder.pt  metadata.json  norm.pt  screener.pkl  template.ply
weights/topology/: down_transforms.pkl  spirals.pkl
